chore: fix word-break in IE

--- a/src/components/thread/thread.scss
+++ b/src/components/thread/thread.scss
@@ -21,6 +21,7 @@
   line-height: 1;
   color: #ffffff;
   white-space: pre-wrap;
+  word-break: break-all;
 }
 
 .second-info-line-container {
@@ -45,6 +46,7 @@
 .reply-container {
   margin: 16px 24px 0 0;
   display: flex;
+  word-break: break-all;
 
   &.right {
     justify-content: flex-end;
